--- a/Fixit8petervaupel.project
+++ b/Fixit8petervaupel.project
@@ -37,6 +37,14 @@
             "calcAB",
             "calcAB.json"
           ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "calc",
+            "calc.json"
+          ]
         }
       ],
       "configxml": null,
